# bugbot-test

./: .gitignore  Readme.md
cplusplus/: CMakeLists.txt  Readme.md
cplusplus/src/: main.cpp
cplusplus/src/cases/: leaks.h
cplusplus/src/cases/exception_path_leak/: exception_path_leak.cpp
cplusplus/src/cases/overwrite_pointer_leak/: overwrite_pointer_leak.cpp
cplusplus/src/cases/raw_new_leak/: raw_new_leak.cpp
cplusplus/src/cases/shared_cycle_leak/: shared_cycle_leak.cpp
go/: go.mod  main.go
go/cases/goroutine_leak/: leak.go  leak_test.go
go/cases/mysql_unclosed/: mysql.go
go/cases/nil_pointer/: nil.go
go/cases/slice_oob/: oob.go
